feat: complete core features for My Properties and Listing pages