@@ -5,22 +5,17 @@ import com.rental.houserental.dto.request.property.LandlordPropertyFilterDTO;
 import com.rental.houserental.dto.request.property.SearchPropertyCriteriaDTO;
 import com.rental.houserental.dto.request.property.UpdatePropertyRequestDTO;
 import com.rental.houserental.dto.response.property.*;
-import com.rental.houserental.entity.Category;
-import com.rental.houserental.entity.PropertyImage;
-import com.rental.houserental.entity.RentalProperty;
-import com.rental.houserental.entity.User;
+import com.rental.houserental.entity.*;
 import com.rental.houserental.enums.FurnishingType;
 import com.rental.houserental.enums.PropertyStatus;
 import com.rental.houserental.exceptions.common.ResourceNotFoundException;
 import com.rental.houserental.exceptions.property.ImageUploadException;
+import com.rental.houserental.exceptions.property.PropertyDeleteException;
 import com.rental.houserental.exceptions.property.PropertyNotFoundException;
-import com.rental.houserental.repository.CategoryRepository;
 import com.rental.houserental.repository.PropertyRepository;
 import com.rental.houserental.repository.specification.RentalPropertySpecification;
 
-import com.rental.houserental.service.CategoryService;
-import com.rental.houserental.service.ImageService;
-import com.rental.houserental.service.PropertyService;
+import com.rental.houserental.service.*;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -44,13 +39,18 @@ public class PropertyServiceImpl implements PropertyService {
     private final PropertyRepository propertyRepository;
     private final ImageService imageService;
     private final CategoryService categoryService;
-    private final CategoryRepository categoryRepository;
+    private final AmenityService amenityService;
+    private final S3Service s3Service;
 
     @Override
     @Transactional
     public void createProperty(CreatePropertyRequestDTO request, User landlord,
                                          MultipartFile[] imageFiles) {
         try {
+            Set<Amenity> amenities = new HashSet<>();
+            if (request.getAmenityIds() != null && !request.getAmenityIds().isEmpty()) {
+                amenities = new HashSet<>(amenityService.findAllByIds(request.getAmenityIds()));
+            }
             RentalProperty property = RentalProperty.builder()
                     .title(request.getTitle())
                     .category(categoryService.findById(request.getCategoryId()))
@@ -66,6 +66,7 @@ public class PropertyServiceImpl implements PropertyService {
                     .landlord(landlord)
                     .furnishing(request.getFurnishing() != null ? FurnishingType.fromString(request.getFurnishing()) : FurnishingType.NONE)
                     .depositPercentage(request.getDepositPercentage())
+                    .amenities(amenities)
                     .latitude(request.getLatitude())
                     .longitude(request.getLongitude())
                     .views(0)
@@ -152,7 +153,7 @@ public class PropertyServiceImpl implements PropertyService {
                 filter.getMaxPrice()
         );
 
-        Object[] arr = (results != null && !results.isEmpty()) ? results.get(0) : new Object[11];
+        Object[] arr = (results != null && !results.isEmpty()) ? results.getFirst() : new Object[11];
 
         return PropertyStatsDTO.builder()
                 .totalProperties(arr[0] == null ? 0L : ((Number) arr[0]).longValue())
@@ -173,6 +174,14 @@ public class PropertyServiceImpl implements PropertyService {
     public PropertyDetailDTO getPropertyDetailById(Long id) {
         RentalProperty property = propertyRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Property not found with id " + id));
+        List<AmenityDTO> amenityDTOs = property.getAmenities().stream()
+                .sorted(Comparator.comparing(Amenity::getId))
+                .map(amenity -> AmenityDTO.builder()
+                        .id(amenity.getId())
+                        .name(amenity.getName())
+                        .description(amenity.getDescription())
+                        .icon(amenity.getIcon())
+                        .build()).toList();
         return PropertyDetailDTO.builder()
                 .id(property.getId())
                 .title(property.getTitle())
@@ -184,10 +193,12 @@ public class PropertyServiceImpl implements PropertyService {
                 .streetAddress(property.getStreetAddress())
                 .ward(property.getWard())
                 .province(property.getProvince())
+                .fullAddress(property.getStreetAddress() + ", " + property.getWard() + ", " + property.getProvince())
                 .description(property.getDescription())
                 .propertyStatus(property.getPropertyStatus())
                 .furnishing(property.getFurnishing() != null ? property.getFurnishing() : FurnishingType.FULL)
                 .depositPercentage(property.getDepositPercentage())
+                .amenities(amenityDTOs)
                 .latitude(property.getLatitude())
                 .longitude(property.getLongitude())
                 .mainImageUrl(property.getMainImageUrl())
@@ -203,6 +214,10 @@ public class PropertyServiceImpl implements PropertyService {
         RentalProperty property = propertyRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Property not found with id " + id));
 
+        if (dto.getAmenityIds() != null) {
+            Set<Amenity> amenities = new HashSet<>(amenityService.findAllByIds(dto.getAmenityIds()));
+            property.setAmenities(amenities);
+        }
         property.setTitle(dto.getTitle());
         property.setDescription(dto.getDescription());
         property.setMonthlyRent(dto.getMonthlyRent());
@@ -216,10 +231,12 @@ public class PropertyServiceImpl implements PropertyService {
         property.setLatitude(dto.getLatitude());
         property.setLongitude(dto.getLongitude());
 
-        // Giữ lại các ảnh cũ mà user chọn (theo danh sách URL)
-        Set<PropertyImage> currentImages = property.getImages();
-        List<String> imageUrlsToKeep = dto.getImageUrls() != null ? dto.getImageUrls() : new ArrayList<>();
+        // ======= Sửa chỗ này để loại bỏ phần tử "" trong danh sách ảnh giữ lại =======
+        List<String> imageUrlsToKeep = dto.getImageUrls() != null
+                ? dto.getImageUrls().stream().filter(s -> s != null && !s.trim().isEmpty()).toList()
+                : new ArrayList<>();
 
+        Set<PropertyImage> currentImages = property.getImages();
         // Xóa các ảnh không còn giữ lại
         currentImages.removeIf(img -> !imageUrlsToKeep.contains(img.getImageUrl()));
 
@@ -229,16 +246,24 @@ public class PropertyServiceImpl implements PropertyService {
             for (PropertyImage img : currentImages) {
                 if (img.getImageUrl().equals(url)) {
                     img.setDisplayOrder(displayOrder);
-                    img.setIsMainImage(displayOrder == 0); // Ảnh đầu là main
+                    img.setIsMainImage(displayOrder == 0);
                     displayOrder++;
                 }
             }
         }
 
-        // Xử lý thêm các ảnh mới (nếu có upload)
-        if (imageFiles != null && imageFiles.length > 0) {
-            List<MultipartFile> fileList = Arrays.asList(imageFiles);
-            List<PropertyImage> newImages = imageService.uploadPropertyImages(fileList, property);
+        // === Xử lý thêm các ảnh mới (nếu có upload hợp lệ) ===
+        List<MultipartFile> validFiles = new ArrayList<>();
+        if (imageFiles != null) {
+            for (MultipartFile f : imageFiles) {
+                if (f != null && !f.isEmpty() && f.getOriginalFilename() != null && !f.getOriginalFilename().isBlank()) {
+                    validFiles.add(f);
+                }
+            }
+        }
+
+        if (!validFiles.isEmpty()) {
+            List<PropertyImage> newImages = imageService.uploadPropertyImages(validFiles, property);
             for (PropertyImage img : newImages) {
                 img.setDisplayOrder(displayOrder);
                 img.setIsMainImage(displayOrder == 0 && imageUrlsToKeep.isEmpty());
@@ -250,14 +275,82 @@ public class PropertyServiceImpl implements PropertyService {
         propertyRepository.save(property);
     }
 
+    @Override
+    @Transactional
+    public void deleteProperty(Long id) {
+        RentalProperty property = propertyRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Property not found with id " + id));
+
+        if (property.getPropertyStatus() != PropertyStatus.DRAFT) {
+            throw new PropertyDeleteException("");
+        }
+        if (!property.getBookings().isEmpty()) {
+            throw new PropertyDeleteException("");
+        }
+
+        // Xóa toàn bộ ảnh trên S3 (theo đúng objectKey đã upload)
+        for (PropertyImage image : property.getImages()) {
+            String imageUrl = image.getImageUrl();
+            try {
+                String objectKey = extractObjectKeyFromUrl(imageUrl);
+                s3Service.deleteFile(objectKey);
+            } catch (Exception ex) {
+                log.warn("Không xóa được ảnh S3: {}. Lỗi: {}", imageUrl, ex.getMessage());
+            }
+        }
+
+        // Xóa property trong database
+        propertyRepository.deleteById(id);
+    }
+
+    // Hàm này cắt objectKey giống lúc upload
+    private String extractObjectKeyFromUrl(String imageUrl) {
+        int idx = imageUrl.indexOf(".amazonaws.com/");
+        if (idx != -1) {
+            return imageUrl.substring(idx + ".amazonaws.com/".length());
+        }
+        throw new IllegalArgumentException("Không thể xác định object key từ url: " + imageUrl);
+    }
 
 
     @Override
-    public void deleteProperty(Long id) {
-        if (!propertyRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Property not found with id " + id);
-        }
-        propertyRepository.deleteById(id);
+    public List<PropertyDetailDTO> getSimularProperties(Integer limit, Long propertyId) {
+        PropertyDetailDTO currentProperty = getPropertyDetailById(propertyId);
+        Long categoryId = currentProperty.getCategoryId();
+
+        List<RentalProperty> properties = propertyRepository
+                .findByCategoryIdAndIdNotAndPropertyStatus(
+                        categoryId,
+                        propertyId,
+                        PropertyStatus.AVAILABLE,
+                        PageRequest.of(0, limit)
+                );
+
+        return properties.stream()
+                .map(property -> PropertyDetailDTO.builder()
+                        .id(property.getId())
+                        .title(property.getTitle())
+                        .categoryId(property.getCategory() != null ? property.getCategory().getId() : null)
+                        .categoryName(property.getCategory() != null ? property.getCategory().getName() : null)
+                        .monthlyRent(property.getMonthlyRent())
+                        .bedrooms(property.getBedrooms())
+                        .bathrooms(property.getBathrooms())
+                        .area(property.getArea())
+                        .streetAddress(property.getStreetAddress())
+                        .ward(property.getWard())
+                        .province(property.getProvince())
+                        .fullAddress(
+                                property.getStreetAddress() + ", " + property.getWard() + ", " + property.getProvince())
+                        .description(property.getDescription())
+                        .propertyStatus(property.getPropertyStatus())
+                        .furnishing(property.getFurnishing())
+                        .mainImageUrl(property.getMainImageUrl())
+                        .imageUrls(
+                                property.getImages().stream().map(PropertyImage::getImageUrl).toList())
+                        .latitude(property.getLatitude())
+                        .longitude(property.getLongitude())
+                        .build())
+                .toList();
 
     }
 
@@ -353,6 +446,25 @@ public class PropertyServiceImpl implements PropertyService {
             log.error("Error converting property to search DTO: {}", property.getId(), e);
             throw e;
         }
+    }
+
+    @Override
+    @Transactional
+    public void increaseView(Long propertyId) {
+        RentalProperty property = propertyRepository.findById(propertyId)
+                .orElseThrow(() -> new PropertyNotFoundException("Property not found with id: " + propertyId));
+        property.setViews(property.getViews() + 1);
+        propertyRepository.save(property);
+    }
+
+    @Override
+    public List<RentalProperty> getPropertiesByLandlordStatusNotAvailable(Long landlordId) {
+        return propertyRepository.findByLandlordIdAndPropertyStatusNot(landlordId, PropertyStatus.AVAILABLE);
+    }
+
+    @Override
+    public List<RentalProperty> getPropertiesByLandlordStatusAvailable(Long landlordId) {
+        return propertyRepository.findByLandlordIdAndPropertyStatus(landlordId, PropertyStatus.AVAILABLE);
     }
 
 }
